methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:5: error: '=' expected but ';' found.
  if (estFaceMur())
^